<!--
  ~ things_do_main_screen_menu.xmlu.xml
  ~ Task Management Application
  ~ 1, COSC2543 - Mobile Application Development
  ~ RMIT International University Vietnam
  ~
  ~ Copyright 2014 Ly Quoc Hung (s3426511)
  ~
  ~ Refer to the NOTICE file in the root of the source tree for
  ~ acknowledgements of third party works used in this software.
  ~
  ~ Date created:       01/07/2014
  ~ Date last modified: 01/07/2014
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.rmit.hung.thingsdo.view.MainScreen">

	<item
		android:id="@+id/action_categories_manager"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_category_manager"/>

	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_settings"/>

	<item
		android:id="@+id/action_sync"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_sync"/>

	<item
		android:id="@+id/action_log_out"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_log_out"/>

	<item
		android:id="@+id/action_exit"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_exit"/>

</menu>
