<!--
  ~ edit_task_screen_menu.xmlu.xml
  ~ Task Management Application
  ~ 1, COSC2543 - Mobile Application Development
  ~ RMIT International University Vietnam
  ~
  ~ Copyright 2014 Ly Quoc Hung (s3426511)
  ~
  ~ Refer to the NOTICE file in the root of the source tree for
  ~ acknowledgements of third party works used in this software.
  ~
  ~ Date created:       03/07/2014
  ~ Date last modified: 03/07/2014
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.rmit.hung.thingsdo.view.EditTaskScreen" >

	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_settings"/>

	<item
		android:id="@+id/action_clear"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_clear"/>

	<item
		android:id="@+id/action_exit"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_exit"/>
</menu>
